# ot-harjoitustyo

./: .coveragerc  .env  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/: database.sqlite3  fmi_stations.csv
documentation/: architecture.md  changelog.md  specifications.md  testing.md  timetracking.md  usermanual.md
dokumentaatio/: architecture.md  changelog.md  specifications.md  testing.md  timetracking.md  usermanual.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/: .gitignore  pyproject.toml
laskarit/viikko2/maksukortti/src/: .maksukortti.py.swp
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/maksukortti/unicafe/: .gitignore
laskarit/viikko2/unicafe/: .gitignore
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: arkkitehtuuri.md  sekvenssikaavio.md
src/: build.py  config.py  index.py  initialize_database.py
src/entities/: observation.py  station.py
src/repositories/: observation_repository.py  station_list_repository.py  station_repository.py
src/services/: observation_scheduler.py  observation_service.py  station_service.py
src/tests/entities/: station_test.py
src/tests/repositories/: observation_repository_test.py  station_repository_test.py
src/tests/services/: observation_scheduler_test.py  observation_service_test.py  station_service_test.py
src/ui/: settings_view.py  station_view.py  stationlist_view.py  ui.py  weather_view.py
