[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Paula Meuronen <paula.meuronen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fmiopendata = "^0.4.3"
python-dotenv = "^1.0.1"
invoke = "^2.2.0"
pytz = "^2024.1"
pylint = "^3.1.0"
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
coverage = "^7.4.4"
pylint = "^3.1.0"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
